--- a/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/view/BranchsViewController.xib
+++ b/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/view/BranchsViewController.xib
@@ -10,6 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BranchsViewController" customModule="iOS_Rasid" customModuleProvider="target">
             <connections>
+                <outlet property="addBranchButton" destination="5Gg-By-WKz" id="q34-nP-dht"/>
+                <outlet property="branchsTableView" destination="gZf-f0-hIj" id="ziR-Nt-MHD"/>
+                <outlet property="reportButton" destination="OeY-CL-xhm" id="eYl-m5-Ggx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
